改进agent模块
